--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <div id="display-wrapper">
     <div id="image-wrapper">
         <canvas id="preview"></canvas>
-        <canvas id="output"></canvas>
+        <canvas id="output" width="0" height="0"></canvas>
     </div>
     <div id="selector-wrapper">
         <div class="parameter-wrapper">
